feat: add "Add to Contacts" action and corresponding translations

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -93,6 +93,7 @@
     <string name="open_in_unknown_phone_com">Apri in UnknownPhone</string>
     <string name="search_in_google">Cerca su Google</string>
     <string name="open_in_whatsapp">Apri in WhatsApp</string>
+    <string name="add_to_contacts">Aggiungi ai contatti</string>
     <string name="block">Blocca</string>
     <string name="add_to_whitelist">Aggiungi alla lista bianca</string>
     <string name="unblock">Sblocca</string>
