--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="open_in_unknown_phone_com">Open in UnknownPhone</string>
     <string name="search_in_google">Search in Google</string>
     <string name="open_in_whatsapp">Open in WhatsApp</string>
+    <string name="add_to_contacts">Add to contacts</string>
     <string name="block">Block</string>
     <string name="add_to_whitelist">Add to whitelist</string>
     <string name="unblock">Unblock</string>
