--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -15,7 +15,7 @@
     <string name="permission_post_notifications">通知の投稿</string>
     <string name="blocked_text_format">%1$s (ブロック済み)</string>
     <string name="whitelisted_text_format">%1$s (ホワイトリスト)</string>
-    <string name="duration_label">通話の経過時間: %1$d 秒</string>
+    <string name="duration_label">着信の経過時間: %1$d 秒</string>
     <string name="incoming_call_not_spam">着信はスパムではないようです</string>
     <string name="notification_channel_name">Spam Call Blocker</string>
     <string name="notification_title_spam_blocked">着信をブロック済み: %1$s</string>
